# ChangeLog for app-editors/emacs-vcs
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*emacs-vcs-24.0.9999-r20 (30 Jan 2011)

  30 Jan 2011; Ulrich Mueller <ulm@gentoo.org> +emacs-vcs-24.0.9999-r20.ebuild,
  +metadata.xml:
  Copied from portage tree. Live ebuild changed to use git.
