@@ -1,3 +1,3 @@
-EBUILD emacs-vcs-24.0.9999-r20.ebuild 10858 RMD160 a302a566c9e2c5ad60acae844252c998ad2232a1 SHA1 7d9623a4fe74d1c5c3f6e972219b351b56a7425e SHA256 3044ad4f106fe869afef0199abe937cb5bc170a8ca5140bc7a632a67030f7776
-MISC ChangeLog 320 RMD160 b9ff8e17a4dffdb2faabe1df0e2f4d1ae5236d33 SHA1 4e3170678cb699d5fb4ec8f6744dbe2653dcd2c1 SHA256 ef9418948a88d0d838dbd832d48863b69430af6dad0d8f51df53ce5e4417f815
+EBUILD emacs-vcs-24.0.9999-r20.ebuild 10852 RMD160 fb3097cb11eb8469412c6f57aff2e7831ad6c490 SHA1 c2a89797d262a5d0da10db7c3f5d1d4987082db5 SHA256 8f18d42cca6c6dbabab1e11577b19a71e04d7d3b788a0b31f925de7805fe7dbf
+MISC ChangeLog 468 RMD160 59e8ad69efada84a5c83db1fb1247b2a7c9c78e8 SHA1 11aea1dd87ef2c1165167a03d5cf7cfa17a19c3b SHA256 b996a90ee5386a516501c7824cc83d2ad46df8019070d2d49bef742b60f90a7f
 MISC metadata.xml 1842 RMD160 57ca3c2d25e695ead4faa6cb01b4d7a03939b511 SHA1 1960513308596b38c3ad7cd248924c903611d39b SHA256 9ebd8972aea68e7b3fd62915725ca35d0678b218d922a467a2c978fe44312ddb
