@@ -2,6 +2,9 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  31 Jan 2011; Ulrich Mueller <ulm@gentoo.org> emacs-vcs-24.0.9999-r20.ebuild:
+  Fix version detection, bug 353324. Set git project name to emacs.
+
 *emacs-vcs-24.0.9999-r20 (30 Jan 2011)
 
   30 Jan 2011; Ulrich Mueller <ulm@gentoo.org> +emacs-vcs-24.0.9999-r20.ebuild,
